--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ chardet==3.0.4
 Click==7.0
 defusedxml==0.6.0
 Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-HTTPAuth==3.3.0
+Flask-SQLAlchemy==2.4.1
 google-auth==1.11.0
 google-auth-oauthlib==0.4.1
 googleads==22.0.0
@@ -17,6 +20,7 @@ Jinja2==2.11.1
 lxml==4.5.0
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+passlib==1.7.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pytz==2019.3
@@ -26,6 +30,7 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rsa==4.0
 six==1.14.0
+SQLAlchemy==1.3.15
 urllib3==1.25.8
 Werkzeug==1.0.0
 xmltodict==0.12.0
